--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   background-color: #262626;
   margin-top: 0;
   padding: 15px 30px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .nav-menu li {
@@ -29,6 +33,10 @@ body {
   color: #5ec3eb;
 }
 
+.about {
+  margin-top: 9em;
+}
+
 .header {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -36,32 +44,64 @@ body {
 }
 
 .header h1 {
-  size: 55px;
+  font-size: 3em;
   letter-spacing: 0.39px;
+  font-weight: 600;
+}
+
+.header h2 {
+  font-size: 1.5em;
+  margin-top: -2%;
+  font-weight: 300;
+  letter-spacing: 0.21px;
 }
 
 .bio {
   display: flex;
   padding: 30px 25px;
-  width: 75%;
+  width: 65em;
   margin: 0 auto;
 }
 
 .bio img {
-  width: 50%;
+  width: 40%;
   padding-right: 20px;
 }
+
+.p-container {
+  margin-left: 3%;
+}
+
 .p-container p {
-  margin-top: 10%;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  letter-spacing: 0.21px;
 }
 
 .p-container button {
-  margin-left: 35%;
+  margin-left: 13em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.7rem 3rem;
+  background-color: #262626;
+  color: #5ec3eb;
+  letter-spacing: 0.03rem;
 }
 
-/*p {
-  font-family: -apple-system, BlinkMacSystemFont, "San Francisco";
-}*/
+.p-container button:hover {
+  cursor: pointer;
+  color: white;
+}
+
+/* media queries */
+
+@media only screen and (max-width: 600px) {
+  .bio {
+    display: block;
+  }
+}
