--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   overflow-x: hidden;
 }
 
+/* nav styles */
 .nav-menu {
   display: flex;
   font-family: -apple-system, BlinkMacSystemFont, "Kohinoor Telugu";
@@ -29,12 +30,18 @@ body {
   font-size: 0.8rem;
 }
 
-.nav-menu li:hover {
-  color: #5ec3eb;
+.nav-menu li a {
+  color: white;
+  text-decoration: none;
 }
 
-.about {
-  margin-top: 9em;
+.nav-menu li a:hover {
+  color: #53c3eb;
+}
+
+/* about styles */
+#about {
+  margin-top: 7em;
 }
 
 .header {
@@ -57,39 +64,42 @@ body {
 }
 
 .bio {
-  display: flex;
+  display: grid;
   padding: 30px 25px;
   width: 65em;
-  margin: 0 auto;
+  margin: 3em auto 3em auto;
+  grid-template-columns: 0.4fr 0.6fr;
 }
 
 .bio img {
-  width: 40%;
-  padding-right: 20px;
+  width: 100%;
 }
 
 .p-container {
-  margin-left: 3%;
+  margin-left: 12%;
+  margin-top: -3.2%;
 }
 
 .p-container p {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.5em;
+  font-size: 1.4em;
   font-weight: 300;
   letter-spacing: 0.21px;
+  line-height: 1.3;
 }
 
 .p-container button {
-  margin-left: 13em;
+  margin-left: 11.5em;
+  margin-top: 1.2em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   font-weight: 600;
   padding: 0.7rem 3rem;
   background-color: #262626;
-  color: #5ec3eb;
+  color: #53c3eb;
   letter-spacing: 0.03rem;
 }
 
@@ -98,10 +108,92 @@ body {
   color: white;
 }
 
+/* work styles */
+#work {
+  background-color: #eeeeee;
+}
+
+#work h1 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 600;
+  font-size: 2.7em;
+  text-align: center;
+  text-decoration: underline;
+  letter-spacing: 0.4px;
+  padding-top: 5%;
+}
+
+.project-container {
+  display: grid;
+  grid-template-rows: repeat(2, 25em);
+  grid-gap: 5em;
+  grid-auto-flow: column;
+  margin: 7%;
+  padding-bottom: 7%;
+}
+
+.project {
+  border: 1px solid black;
+  grid-auto-flow: column;
+  grid-template-rows: 20em;
+  padding-top: 66%;
+}
+
+.project-title {
+  background-color: #262626;
+  padding: 1.5%;
+}
+
+/* contact styles */
+#contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -5%;
+}
+
+#contact h1 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 600;
+  font-size: 2.7em;
+  text-align: center;
+  text-decoration: underline;
+  letter-spacing: 0.4px;
+}
+
+#contact h2 {
+  font-size: 1.3rem;
+  margin-top: -2%;
+  font-weight: 200;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+#contact form {
+  background-color: #262626;
+  width: 45em;
+  display: flex;
+  flex-direction: column;
+  height: 30em;
+}
+
 /* media queries */
 
 @media only screen and (max-width: 600px) {
   .bio {
-    display: block;
+    display: flex;
+    flex-direction: column;
+  }
+  .bio img {
+    width: 40%;
   }
 }
+
+/* @media only screen and (max-width: 860px) {
+  .project-container {
+    display: flex;
+    flex-direction: column;
+  }
+} */
