--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body {
 /* work styles */
 #work {
   background-color: #eeeeee;
+  padding-bottom: 10%;
 }
 
 #work h1 {
@@ -125,24 +126,57 @@ body {
 }
 
 .project-container {
-  display: grid;
-  grid-template-rows: repeat(2, 25em);
-  grid-gap: 5em;
-  grid-auto-flow: column;
-  margin: 7%;
-  padding-bottom: 7%;
+  display: flex;
+  margin: 5%;
+  flex-wrap: wrap;
+  flex-direction: row;
+  min-height: 100%;
 }
 
 .project {
-  border: 1px solid black;
-  grid-auto-flow: column;
-  grid-template-rows: 20em;
-  padding-top: 66%;
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  margin-bottom: 5%;
+}
+
+.project:hover {
+  box-shadow: 0 0 20px #53c3eb;
+  cursor: pointer;
+}
+
+.project img {
+  width: 100%;
+  border-radius: 0.2em;
+}
+
+.project-2-img {
+  height: 87%;
+}
+
+.project-1,
+.project-3 {
+  margin-right: 5%;
+}
+
+.project-4 {
+  background-color: lightgray;
+  padding-top: 31%;
 }
 
 .project-title {
   background-color: #262626;
   padding: 1.5%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
+  margin-top: -3%;
+}
+
+.project-title span {
+  float: right;
+  color: #53c3eb;
+  padding-right: 1%;
 }
 
 /* contact styles */
