--- a/style.css
+++ b/style.css
@@ -91,8 +91,7 @@ body {
 }
 
 .p-container button {
-  margin-left: 11.5em;
-  margin-top: 1.2em;
+  margin-top: 1.7em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
@@ -101,6 +100,7 @@ body {
   background-color: #262626;
   color: #53c3eb;
   letter-spacing: 0.03rem;
+  border-radius: 0.3em;
 }
 
 .p-container button:hover {
@@ -140,6 +140,7 @@ body {
   width: 45%;
   margin-bottom: 5%;
   height: 50%;
+  border-radius: 0.3em;
 }
 
 .project:hover {
@@ -169,6 +170,7 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
   margin-top: -3%;
+  padding-left: 3%;
 }
 
 .project-title-2 {
@@ -245,7 +247,7 @@ body {
 
 #contact ::placeholder {
   color: #262626;
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 500;
 }
 
@@ -343,7 +345,7 @@ body {
 
 .social-icons object {
   margin-top: 5%;
-  margin-left: 5%;
+  margin-left: 2.5%;
   filter: invert(1);
 }
 
@@ -388,23 +390,139 @@ body {
   padding: 0.5%;
 }
 
-​
+.copyright img {
+  width: 1.5%;
+  filter: invert(77%) sepia(76%) saturate(2633%) hue-rotate(167deg)
+    brightness(103%) contrast(84%);
+  padding-right: 0.5%;
+}
+
+.credits {
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 2.5%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #eeeeee;
+}
+
+.p-1 {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.p-2 {
+  font-size: 1.3em;
+  line-height: 0.4em;
+}
+
+.p-2 a {
+  color: #eeeeee;
+  text-decoration: none;
+}
+
+.p-2 a:hover {
+  cursor: pointer;
+  color: #53c3eb;
+}
 
 /* media queries */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1100px) {
   .bio {
-    display: flex;
-    flex-direction: column;
+    font-size: smaller;
   }
-  .bio img {
-    width: 40%;
+  .p-container button {
+    font-size: 0.8em;
+    padding: 0.5rem 1.5rem;
   }
 }
 
-/* @media only screen and (max-width: 860px) {
-  .project-container {
+@media only screen and (max-width: 900px) {
+  .bio {
+    font-size: x-small;
+  }
+  #contact form {
+    width: 40em;
+    padding: 1rem 1rem 2.5rem;
+  }
+}
+
+/* elements start stacking */
+@media only screen and (max-width: 800px) {
+  .bio {
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
   }
-} */
+  .bio img {
+    width: 50vw;
+    margin-bottom: 5%;
+    align-self: center;
+  }
+  .p-container {
+    font-size: small;
+    align-self: center;
+    margin: 0;
+  }
+  .project-container {
+    flex-direction: column;
+    align-content: center;
+  }
+  .project {
+    width: 70vw;
+  }
+  .project-1,
+  .project-3 {
+    margin-right: 0;
+  }
+  .up-icon {
+    display: none;
+  }
+  .social-icons object {
+    width: 5vw;
+  }
+  .footer {
+    font-size: small;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  #contact form {
+    width: 30em;
+    padding-bottom: 1%;
+  }
+  #submit {
+    font-size: 1.7vw;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .bio {
+    width: 80vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: x-large !important;
+  }
+  h2 {
+    font-size: large !important;
+  }
+  #contact h2 {
+    font-weight: 300;
+  }
+  #contact form {
+    width: 70vw;
+  }
+  #contact ::placeholder {
+    padding: 2.5%;
+    font-weight: 300;
+  }
+  #submit {
+    width: 35vw;
+    margin-top: 5vw;
+    font-size: 2.5vw;
+  }
+}
