.project-container align-content: center  not working, trying flex-wrap: nowrap

--- a/style.css
+++ b/style.css
@@ -518,6 +518,7 @@ body {
   .project-container {
     flex-direction: column;
     align-content: center;
+    flex-wrap: nowrap;
   }
   .project {
     width: 70vw;
