--- a/style.css
+++ b/style.css
@@ -521,6 +521,7 @@ body {
   }
   .project {
     width: 70vw;
+    align-content: center;
   }
   .project-1,
   .project-3 {
@@ -555,6 +556,7 @@ body {
 @media only screen and (max-width: 600px) {
   #contact form {
     width: 70vw;
+    padding-bottom: 0;
   }
   #contact ::placeholder {
     font-weight: 300;
@@ -565,11 +567,11 @@ body {
     font-size: 2.5vw;
   }
   .social-icons img {
-    width: 7vw;
+    width: 6.5vw;
   }
   .p1,
   .p2 {
-    font-size: small;
+    font-size: xx-small;
   }
   .copyright img {
     width: 3%;
