--- a/style.css
+++ b/style.css
@@ -497,6 +497,7 @@ body {
   }
   #contact h2 {
     font-weight: 300;
+    width: 80%;
   }
 
   .bio {
@@ -526,6 +527,13 @@ body {
   .project-1,
   .project-3 {
     margin-right: 0;
+  }
+  .project-title {
+    text-align: center;
+  }
+  .project-title span {
+    float: none;
+    display: block;
   }
   .up-icon {
     display: none;
@@ -569,9 +577,9 @@ body {
   .social-icons img {
     width: 6.5vw;
   }
-  .p1,
-  .p2 {
-    font-size: xx-small;
+  .p-1,
+  .p-2 {
+    font-size: x-small;
   }
   .copyright img {
     width: 3%;
